upgrade .net version

--- a/src/WebAPI/appsettings.json
+++ b/src/WebAPI/appsettings.json
@@ -1,8 +1,8 @@
 {
 
   "ConnectionStrings": {
-    "PostgreSql": "User ID=admin;Password=Password12*;Server=localhost;Port=5432;Database=blogDb;Integrated Security=true;Pooling=true",
-    "PostgreSqlTest": "Server=localhost;Port=5432;Database=blogDb;User ID=admin;Password=Password12*"
+    "PostgreSql": "User ID=admin;Password=Password12*;Server=localhost;Port=5432;Database=blogDb;Trusted_Connection=True;Pooling=true",
+    "PostgreSqlTest": "Server=localhost;Port=5432;Database=blogDb;User ID=admin;Password=Password12*;Trusted_Connection=True"
   },
   "Logging": {
     "LogLevel": {
