--- a/src/WebAPI/appsettings.Development.json
+++ b/src/WebAPI/appsettings.Development.json
@@ -1,13 +1,15 @@
 {
   "ConnectionStrings": {
-    "PostgreSql": "User ID=admin;Password=Password12*;Server=localhost;Port=5432;Database=blogDb;Integrated Security=true;Pooling=true",
-    "PostgreSqlTest": "Server=localhost;Port=5432;Database=blogDb;User ID=admin;Password=Password12*"
+    "PostgreSql": "User Name=admin;Password=Password12*;Host=localhost;Port=5432;Database=blogDb",
+    "PostgreSqlTest": "Host=localhost;Port=5432;Database=blogDb;User ID=admin;Password=Password12*;Integrated Security=True"
   },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore.DataProtection": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft.AspNetCore": "Warning",
+      "Microsoft.AspNetCore.HttpLogging.HttpLoggingMiddleware": "Information"
+
     }
   },
   "AllowedHosts": "*"
